--- a/gb/21/7/1/n13061736.md
+++ b/gb/21/7/1/n13061736.md
@@ -1,19 +1,18 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/rskgqd324/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/rskgqd324/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/rskgqd324/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/rskgqd324/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/rskgqd324/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/rskgqd324/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/rskgqd324/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/rskgqd324/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/rskgqd324/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/rskgqd324/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/rskgqd324/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/rskgqd324/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/rskgqd324/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/rskgqd324/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/rskgqd324/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/rskgqd324/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/rskgqd324/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/rskgqd324/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/rskgqd324/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/rskgqd324/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/rskgqd324/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/rskgqd324/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/rskgqd324/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/rskgqd324/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>【秦鹏直播】蓬佩奥评中共百年：杀人民最多的党</h2>
-<a href="https://git.io/JclWT"><img width="600" src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/rskgqd324/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
-<h6>蓬佩奥评中共百年：害人民最多的党。（《秦鹏直播》提供）
-</h6>
+<a href="https://d3myewunzonann.cloudfront.net/W6zQJGmGm"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
+<h6></h6>
 <hr>
 	<p>【大纪元2021年07月02日讯】大家好，现在是美东时间7月1日晚上6:30，北京时间7月2日。欢迎收看时事天天聊，我是Sydney（王愉贺）；我是秦鹏。</p>
-<p>今天焦点：<ahref="https://github.com/rskgqd324/djy/blob/master/gb/tag/%E8%93%AC%E4%BD%A9%E5%A5%A5.md#1">蓬佩奥</a>评中共百年：害人民最多的党；北欧四大报致<ahref="https://github.com/rskgqd324/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>联合公开信，震惊中共大使馆；首富马斯克赞美中共遭吐槽，<ahref="https://github.com/rskgqd324/djy/blob/master/gb/tag/%E7%89%B9%E6%96%AF%E6%8B%89.md#1">特斯拉</a>恐续<ahref="https://github.com/rskgqd324/djy/blob/master/gb/tag/%E8%8B%B9%E6%9E%9C.md#1">苹果</a>噩梦。</p>
-<p>Sydney：中共日前耗费巨额，为自己百年党庆涂脂抹粉，引发了西方媒体、国际社会、人权卫士和海外华人网民对中共潮水般的揭露、唾骂和声讨。北欧四国四大报致<ahref="https://github.com/rskgqd324/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>的联合公开信，震惊了中共大使馆。</p>
+<p>今天焦点：<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%93%AC%E4%BD%A9%E5%A5%A5.md#1">蓬佩奥</a>评中共百年：害人民最多的党；北欧四大报致<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>联合公开信，震惊中共大使馆；首富马斯克赞美中共遭吐槽，<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%89%B9%E6%96%AF%E6%8B%89.md#1">特斯拉</a>恐续<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%8B%B9%E6%9E%9C.md#1">苹果</a>噩梦。</p>
+<p>Sydney：中共日前耗费巨额，为自己百年党庆涂脂抹粉，引发了西方媒体、国际社会、人权卫士和海外华人网民对中共潮水般的揭露、唾骂和声讨。北欧四国四大报致<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E4%B9%A0%E8%BF%91%E5%B9%B3.md#1">习近平</a>的联合公开信，震惊了中共大使馆。</p>
 <p>这种国际社会罕见的一致态度，恰洽和一份最新民调相符，发达国家对中共恶感度创下历史纪录。我们今天来看一下，海外政要、媒体和华人是如何评价中共100周年的。</p>
-<p>秦鹏：“有人漏夜赶科场，有人辞官归故里。”美国超级富豪、<ahref="https://github.com/rskgqd324/djy/blob/master/gb/tag/%E7%89%B9%E6%96%AF%E6%8B%89.md#1">特斯拉</a>执行长马斯克在推特和微博称赞“中国经济繁荣”，引发网络热议。有网友说“马书记啥时候入的党”，也有人感叹他是为了特斯拉而摆出的“满满的求生欲”。</p>
-<p>不过，几天前，有媒体报导美国专家7年前曾经警告<ahref="https://github.com/rskgqd324/djy/blob/master/gb/tag/%E8%8B%B9%E6%9E%9C.md#1">苹果</a>，结果依然噩梦成真。从目前看，特斯拉恐步苹果后尘。</p>
-<p><center><a title="YouTube video player" src=""></a><a href="https://git.io/JclWT"><img width="600" src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/rskgqd324/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/0URX1U334xs" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen" data-mce-fragment="1"></a></center></p>
-<h2><ahref="https://github.com/rskgqd324/djy/blob/master/gb/tag/%E8%93%AC%E4%BD%A9%E5%A5%A5.md#1">蓬佩奥</a>谈中共百年：杀害人民最多的党</h2>
+<p>秦鹏：“有人漏夜赶科场，有人辞官归故里。”美国超级富豪、<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%89%B9%E6%96%AF%E6%8B%89.md#1">特斯拉</a>执行长马斯克在推特和微博称赞“中国经济繁荣”，引发网络热议。有网友说“马书记啥时候入的党”，也有人感叹他是为了特斯拉而摆出的“满满的求生欲”。</p>
+<p>不过，几天前，有媒体报导美国专家7年前曾经警告<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%8B%B9%E6%9E%9C.md#1">苹果</a>，结果依然噩梦成真。从目前看，特斯拉恐步苹果后尘。</p>
+<p><center><a src=""></a><a href="https://d3myewunzonann.cloudfront.net/W6zQJGmGm"><img width="600" src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><a src="https://www.youmaker.com/embed/0c49ae7f-379c-4ab0-827a-71997540f539?r=16x9&amp;d=2528" width="640" b="360" frameborder="0" allowfullscreen="allowfullscreen"></a></center></p>
+<h2><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E8%93%AC%E4%BD%A9%E5%A5%A5.md#1">蓬佩奥</a>谈中共百年：杀害人民最多的党</h2>
 <p>Sydney：秦鹏，你有没有注意到，今年的世界主流媒体，几乎无一例外都做了一个中共百年党庆的专题系列报导，除了报导这一次由习近平所主导的大庆的几个重要活动，还纷纷发表了深度报导，真的是一个非常非常罕见的事。</p>
 <p>秦鹏：更让我觉得罕见，甚至有些惊讶的是，几乎所有主流媒体，都众口一词地揭露中共这一百年是如何杀戮中国人民的历史，而且写得还很有深度。有一些评论也直击中共的合法性以及挂羊头卖狗肉的所谓的社会主义实质是权贵独裁政权。</p>
 <p>说实话，我甚至都有点不适应，我觉得这怎么一夜之间都变了，怎么世界都清醒了？</p>
@@ -98,48 +97,42 @@
 <p>为美国公司提供咨询的新美国基金会的中国问题专家萨克斯（Samm Sacks）说：“西方公司在中国做生意一直很困难。”他认为共产党牢牢控制着，西方公司和中国私营部门都举步维艰。</p>
 <p>所以问题就来了，我们刚刚也看到了，现在似乎马斯克的特斯拉，也要屈服了，特斯拉会不会步入苹果的后尘，像苹果一样被中共牢牢掌控，只好妥协了？</p>
 <p>秦鹏：近年来发生的事情包括，万豪（Marriott）在一项客户调查中将西藏和台湾列在标着“国家”的简单下拉菜单后，中国关闭了该公司的网站。中国暂停了领英（LinkedIn）的用户注册，因为公司没有审查足够多的政治内容。中共呼吁抵制批评新疆使用强迫劳动的西方服装公司，中国政府正在新疆镇压维吾尔穆斯林少数民族。</p>
-<p>《<ahref="https://github.com/rskgqd324/djy/blob/master/gb/tag/%E7%A7%A6%E9%B9%8F%E7%9B%B4%E6%92%AD.md#1">秦鹏直播</a>》制作组</p>
+<p>《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%A7%A6%E9%B9%8F%E7%9B%B4%E6%92%AD.md#1">秦鹏直播</a>》制作组</p>
 <p>责任编辑：李昊?#</p>
 	
 <hr>
 <hr>
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/25/n13048344.md#1">【秦鹏直播】抵制无效！Nike财报远超预期</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/28/n13054186.md#1">【秦鹏直播】泄漏论反转？蓬佩奥戳中共痛点</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/29/n13056813.md#1">【秦鹏直播】习向普京送礼？美专家倡经济北约</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/30/n13059047.md#1">【秦鹏直播】美上将指向武毒所 中共军方早接管</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/25/n13048344.md#1">【秦鹏直播】抵制无效！Nike财报远超预期</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/28/n13054186.md#1">【秦鹏直播】泄漏论反转？蓬佩奥戳中共痛点</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/29/n13056813.md#1">【秦鹏直播】习向普京送礼？美专家倡经济北约</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/30/n13059047.md#1">【秦鹏直播】美上将指向武毒所 中共军方早接管</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/13/n10054247.md#1" target="_blank">杨宁：不容粉饰 巴金季羡林韦君宜痛批文革</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/5/27/n11282738.md#1" target="_blank">纽约11位国会议员褒奖法轮大法</a></li><hr>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank">海峡两岸的强烈对比</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/1/22/n10077365.md#1" target="_blank">金剑：阶级斗争是民族毁灭的动力</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/23/n11741126.md#1" target="_blank">在家暴进化论中堕落 一本书让他翻转人生</a></li><hr>
 
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/14/n13020876.md#1">【命理】功名有无 寿命长短 都是上天给的</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/25/n13046979.md#1">前苏联海军总司令：帽状UFO从海中飞出</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/26/n13048557.md#1">【方菲访谈】专访李有甫：从三星堆看史前文化</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/25/n13048015.md#1">【忠义传】义薄云天的华夏战神关羽</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/24/n13045083.md#1">【未解之谜】西藏的神秘现象（1） 转世灵童</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/30/n13058903.md#1">【探索时分】以色列如何中东立足？五大理由</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/7/1/n13060457.md#1">【马克时空】马斯克越挫越勇  SpaceX如何起死回生？</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/7/1/n13061606.md#1">【财商天下】中国取消复读 一半人大学无望？</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/30/n13058825.md#1">中共航母现硬伤？卫星拍到山东舰甲板严重破损</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/29/n13056630.md#1">汤唯4岁女儿嫌天热 自己剪发获赞率性如妈妈</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/30/n13058858.md#1">闫丽梦：丈夫来美协助中共 想让她消失</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/29/n13056630.md#1">汤唯4岁女儿嫌天热 自己剪发获赞率性如妈妈</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/29/n13055192.md#1">“赚来干嘛 ” 柯宇纶膝盖超硬拒陆800万片酬</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/28/n13054065.md#1">张雨绮为何改名？只因电视广告里常有一个字</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/29/n13056427.md#1">赵薇丈夫黄有龙被追欠款 连本带息近3亿港币</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/30/n13057680.md#1">力挺屏东家乡芒果 彭佳慧大气订102箱送亲友</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/28/n13051973.md#1">这种睡姿最可怕？专家教3招 保持正确睡姿一整夜</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/29/n13055373.md#1">英国赛鸽比赛 上万只鸽子神秘失踪</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/30/n13058574.md#1">Delta变种3大危险性！新症状、疫苗保护力一次看</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/30/n13057326.md#1">台湾捐款涌入立陶宛社福机构 报疫苗之恩</a></li>
-<li><a href="https://github.com/rskgqd324/djy/blob/master/gb/21/6/29/n13054854.md#1">美国男子在佛州拍到奇景 云层如波涛汹涌</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11947698.md#1">华人纷纷回国？律师披露红二代不回国内幕</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/18/n11949573.md#1">武汉现“危险信号”疫情将再次爆发？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11948259.md#1">中共撤驻华美媒记者工作证 蓬佩奥强烈回应</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11948137.md#1">美军散毒？中共网军“铁证视频”被揭造假</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11947993.md#1">伊朗隐瞒疫情 来自伊朗的台湾女婿爆真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11946544.md#1">台歌仔戏国宝小凤仙病逝 享寿80岁　</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/18/n11949282.md#1">《恋爱可以持续到天长地久》完结 收视破15%</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/16/n11945468.md#1">赵丽颖复工晒片场照 吊超高威亚压根看不到人</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11948248.md#1">疫情下涉口罩诈骗案 大陆男星获刑39个月</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11947742.md#1">梁朝伟拍陆片《猎狐行动》搭档女主确诊染疫</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/11/n11933376.md#1">僧人精准预言 琅琊三孩童竟是“真一品”</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/12/n11936269.md#1">缘自天上来 这对夫妻是星官下凡</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/17/n11946008.md#1">名人纷确诊 《权力游戏》《复仇者》演员染疫</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/25/n3095498.md#1">姻缘天注定 丑女有丑福</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/20/3/10/n11929738.md#1">“福无双至祸不单行”史上有名的明鉴</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/rskgqd324/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/rskgqd324/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/1/n13061736.htm">【秦鹏直播】蓬佩奥评中共百年：杀人民最多的党</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/7/1/n13061736.htm">【秦鹏直播】蓬佩奥评中共百年：杀人民最多的党</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/rskgqd324/djy/blob/master/gb/21/7/1/n13061736.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/rskgqd324/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/rskgqd324/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/rskgqd324/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/rskgqd324/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/rskgqd324/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/7/1/n13061736.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
